@@ -1,3 +1,7 @@
+2017-08-20  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	* src/ftdump.c (Print_Charmaps): Decorate with glyph names.
+
 2017-07-06  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	[ftstring] Tweak adjustment of spacing.
